# SPWAR_ws

./: .gitignore  README.md  empty_world.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hello_moveit/lib/hello_moveit/: hello_moveit
install/hello_moveit/share/hello_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/hello_moveit/share/hello_moveit/cmake/: hello_moveitConfig-version.cmake  hello_moveitConfig.cmake
install/spot_description/share/spot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/spot_moveit_config/share/spot_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.zsh
log/: latest_build
src/hello_moveit/src/: hello_moveit.cpp
src/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/spot_description/launch/: gazebo.launch.py  spot_moveit_rviz.launch.py
src/spot_description/urdf/: simple_robot.urdf  spot_with_arm.urdf
src/spot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/spot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  spot.ros2_control.xacro  spot.srdf  spot.urdf.xacro
src/spot_moveit_config/install/: local_setup.sh  setup.sh
src/spot_moveit_config/install/spot_moveit_config/share/spot_moveit_config/: package.dsv  package.ps1  package.sh
src/spot_moveit_config/launch/: demo.launch.py
src/spot_moveit_config/log/: latest_build
src/spot_teleop/: CMakeLists.txt  package.xml
src/spot_teleop/config/: servo_parametrs.yaml
(+98 files in other folders)
